# AgentLab

./: .gitignore  LICENSE  README.md  api.py  demo.py  demo1_reflect.py  demo2_finetune.py  demo_detective.py  demo_leaderless_discuss.py  demo_meeting.py  demo_recommendation.py  detective.py  exp.py  experiment.py  framework.py  main.py  pyproject.toml  requirements.txt  setup.py
AISimuToolKit/exp/: __init__.py  experiment.py
AISimuToolKit/model/: __init__.py  embedding.py  model.py  register.py
AISimuToolKit/store/: logger.py
AISimuToolKit/utils/: __init__.py  utils.py
actions/: setup.py
api/: api.py  api_deprecated.py
docs/: README.md  requirements.txt
docs/source/: AISimuToolKit.exp.agents.rst  AISimuToolKit.exp.rst  AISimuToolKit.exp.scheduler.rst  AISimuToolKit.exp.toolkit.rst  AISimuToolKit.model.rst  AISimuToolKit.rst  AISimuToolKit.store.rst  AISimuToolKit.utils.rst  conf.py
exp/: expe_info.py
exp/actions/: base_action.py  instruct_action.py  probe_action.py  reflection_action.py  rs.py  think.py
exp/agents/: agent.py  memory.py
exp/check/: history.py
files4test/: expe_config.json
scripts/: experiment.py  main.py  rs.py
scripts_TODO/: experiment.py  main.py
src/: __init__.py
src/exp/: __init__.py  expe_info.py  experiment.py
src/model/: __init__.py  model.py  register.py
src/utils/: __init__.py  model_api.py  scripts.py  utils.py
store/: __init__.py
store/text/: logger.py  memory.py
temp/: api_deprecated.py  model_api.py
test/: test_experiment.py
test/files4test/: expe_config.json  (+2 more)
utils/: model_api.py  scripts.py
(+44 files in other folders)
